# semantic-kv-control-plane

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml
benchmarks/: benchmark_runner.py  run_all.py  scenarios.py
benchmarks/results/: approx_prefix_reuse.csv  approx_prefix_reuse.json  approx_prefix_reuse.md  benchmark_policy_averages.csv  benchmark_results.csv  benchmark_summary.md  results_confidence.md  scenario_findings.md  scenario_results.csv  scenario_results.json  scenario_summary.md
dashboards/: streamlit_app.py
docs/: architecture.md  calibration.md  design_notes.md  ecosystem_context.md  research_notes.md  research_questions.md  roadmap.md  trace_support.md
examples/: quickstart.ipynb  run_basic_simulation.py  run_lru_vs_semantic.py  run_prefix_reuse_demo.py
examples/traces/: agentic_loop.md  long_context.md  mixed_production.md  multi_tenant_rack.md  scenario_01_shared_prefix_100_sessions.md  scenario_02_shared_prefix_1000_sessions.md  scenario_03_agentic_tool_loop.md  scenario_04_long_context_128k.md  scenario_05_multi_tenant_rack.md  scenario_06_mixed_production.md  shared_enterprise.md
outputs/: dashboard.html  results.csv
outputs/blog/: blog_outline.md  key_findings.md  social_thread.md
scripts/: generate_blog_assets.py  generate_paper_figures.py  reproduce_all.py
src/semantic_kv/: __init__.py  analysis.py  approx_prefix.py  attention.py  cli.py  compression.py  dashboard.py  eviction.py  fabric.py  failures.py  heat.py  metadata.py  metrics.py  models.py  movement.py  multicast.py  placement.py  (+10 more)
tests/: conftest.py  test_analysis.py  test_approx_prefix.py  test_cli_and_outputs.py  test_distributed.py  test_eviction.py  test_figures.py  test_generators_and_observability.py  test_invariants.py  test_metadata.py  test_placement.py  test_policy_and_eviction_extended.py  test_prefix_reuse.py  test_realism_layers.py  test_scenarios.py  test_simulator.py  test_trace_replay.py  test_traces.py
(+5 files in other folders)
