[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-kv-control-plane"
version = "0.1.0"
description = "A systems research platform for semantic KV-cache orchestration, topology-aware memory placement, distributed prefix reuse, and rack-scale inference memory simulation."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Semantic KV Contributors"}]
dependencies = [
  "datasketch>=1.6",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "rich>=13.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = ["hypothesis>=6.0", "pytest>=7.4", "pytest-cov>=5.0", "ruff>=0.6"]
dashboard = ["streamlit>=1.32"]

[project.scripts]
semantic-kv = "semantic_kv.cli:app"

[project.urls]
Homepage = "https://github.com/manishklach/semantic-kv-control-plane"
Repository = "https://github.com/manishklach/semantic-kv-control-plane"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
